--- a/debian/rules
+++ b/debian/rules
@@ -1,6 +1,6 @@
 #!/usr/bin/make -f
 
-JAVA_HOME := /usr/lib/jvm/java-6-sun
+JAVA_HOME := /usr/lib/jvm/default-java
 JAVA_CMD := $(JAVA_HOME)/bin/java
 BLDLIB := output/build/lib
 BLDBIN := output/build/bin
