--- a/debian/control
+++ b/debian/control
@@ -1,10 +1,13 @@
 Source: tomcat7
 Section: java
 Priority: optional
-Maintainer: Ernesto Hernádez-Novich <emhn@itverx.com.ve>
+Maintainer: Debian Java Maintainers <pkg-java-maintainers@lists.alioth.debian.org>
+Uploaders: James Page <james.page@canonical.com>
 Build-Depends: default-jdk, ant-optional, debhelper (>= 7), po-debconf
 Build-Depends-Indep: maven-repo-helper (>> 1.0.1), libecj-java
-Standards-Version: 3.8.4
+Standards-Version: 3.9.2
+Vcs-Git: git://git.debian.org/git/pkg-java/tomcat7.git
+Vcs-Browser: http://git.debian.org/?p=pkg-java/tomcat7.git
 Homepage: http://tomcat.apache.org
 
 Package: tomcat7-common
