--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,8 @@ Source: tomcat7
 Section: java
 Priority: optional
 Maintainer: Debian Java Maintainers <pkg-java-maintainers@lists.alioth.debian.org>
-Uploaders: James Page <james.page@canonical.com>
+Uploaders: James Page <james.page@canonical.com>,
+ Miguel Landaeta <miguel@miguel.cc>
 Build-Depends: default-jdk, ant-optional, debhelper (>= 7), po-debconf
 Build-Depends-Indep: maven-repo-helper (>> 1.0.1), libecj-java
 Standards-Version: 3.9.2
