--- a/debian/control
+++ b/debian/control
@@ -31,7 +31,7 @@ Suggests: tomcat7-docs (>= ${source:Version}),
 	tomcat7-admin (>= ${source:Version}),
 	tomcat7-examples (>= ${source:Version}),
 	tomcat7-user (>= ${source:Version}),
-  tomcat-native
+	libtcnative-1
 Description: Servlet and JSP engine
  Apache Tomcat implements the Java Servlet and the JavaServer Pages (JSP)
  specifications from Sun Microsystems, and provides a "pure Java" HTTP web
