--- a/debian/control
+++ b/debian/control
@@ -91,7 +91,8 @@ Description: Servlet 3.0 and JSP 2.2 Java API classes
 Package: libservlet3.0-java-doc
 Section: doc
 Architecture: all
-Depends: libservlet3.0-java (>= ${source:Version}), ${misc:Depends}
+Depends: ${misc:Depends}
+Suggests: libservlet3.0-java (>= ${source:Version})
 Description: Servlet 3.0 and JSP 2.2 Java API documentation
  Apache Tomcat implements the Java Servlet and the JavaServer Pages (JSP)
  specifications from Sun Microsystems, and provides a "pure Java" HTTP web
