Enable test suite during package build:
* Enable test suite during package build:
  - d/control: Add junit4, libjstl1.1-java and
    libjakarta-taglibs-standard-java to BDI's.
  - d/rules:
    + Add ant/junit4 jars files to build classpath.
    + Target java 1.6 to support test suite exection.
    + Specify location of junit jar file.
    + Install jstl jar files to example webapp during build.
    + Conditionally execute test target if required.
    + Purge jar files from example webapp during clean.
* Fix JSTL examples in examples web application:
  - d/control: Add dependencies on libjstl1.1-java and
    libjakarta-taglibs-standard-java for tomcat7-examples.
  - d/tomcat7-examples.links: Add links to jstl and standard jar
    files for examples web application.
  - d/context/examples.xml: Allow linking to jar files in examples
    webapp.
* Fix mapping to javax packages for API jar files:
  - d/maven.[rules,publishedRules]: Ensure all javax.[servlet|el] jar files
    are published to the correct locations in /usr/share/[maven-repo|java].
  - d/libservlet3.0-java.manifest: Update jar file locations for javax
    remapping.
  - d/libservlet3.0-java.links: Provide backwards compatible links for
    deprecated tomcat-*.jar files in /usr/share/java.

--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,8 @@ Uploaders: James Page <james.page@ubuntu.com>,
  Miguel Landaeta <miguel@miguel.cc>, tony mancill <tmancill@debian.org>,
  Jakub Adam <jakub.adam@ktknet.cz>
 Build-Depends: default-jdk, ant-optional, debhelper (>= 7), po-debconf
-Build-Depends-Indep: maven-repo-helper (>> 1.0.1), libecj-java, javahelper
+Build-Depends-Indep: maven-repo-helper (>> 1.0.1), libecj-java, javahelper,
+ junit4, libjstl1.1-java, libjakarta-taglibs-standard-java
 Standards-Version: 3.9.3
 Vcs-Git: git://git.debian.org/git/pkg-java/tomcat7.git
 Vcs-Browser: http://git.debian.org/?p=pkg-java/tomcat7.git
@@ -112,7 +113,8 @@ Description: Servlet and JSP engine -- admin web applications
 
 Package: tomcat7-examples
 Architecture: all
-Depends: tomcat7-common (>= ${source:Version}), ${misc:Depends}
+Depends: tomcat7-common (>= ${source:Version}), ${misc:Depends},
+ libjstl1.1-java, libjakarta-taglibs-standard-java
 Description: Servlet and JSP engine -- example web applications
  Apache Tomcat implements the Java Servlet and the JavaServer Pages (JSP)
  specifications from Sun Microsystems, and provides a "pure Java" HTTP web
