--- a/debian/rules
+++ b/debian/rules
@@ -76,6 +76,7 @@ clean:
 	rm -rf "output/"
 	rm -rf webapps/examples/WEB-INF/lib/*.jar
 	rm -f build-stamp modules/jdbc-pool/output/resources/MANIFEST.MF
+	rm -f debian/tomcat7.postrm
 	dh_clean
 	mh_clean
 
@@ -164,7 +165,7 @@ binary-indep: build install
 	# update the checksum for the root webapp
 	unset rwmd5sum \
 		&& rwmd5sum=`cat $(RWFILES) | md5sum - 2>/dev/null | cut -d " " -f1` \
-		&& sed -i "s/\@ROOT_WEBAPP_MD5SUM\@/$$rwmd5sum/" debian/tomcat7.postrm
+		&& sed "s/\@ROOT_WEBAPP_MD5SUM\@/$$rwmd5sum/" debian/tomcat7.postrm.in > debian/tomcat7.postrm
 	jh_manifest
 	dh_compress
 	dh_fixperms
