--- a/debian/control
+++ b/debian/control
@@ -6,12 +6,12 @@ Uploaders: James Page <james.page@ubuntu.com>,
  Miguel Landaeta <miguel@miguel.cc>,
  tony mancill <tmancill@debian.org>,
  Jakub Adam <jakub.adam@ktknet.cz>
-Build-Depends: default-jdk, ant-optional, debhelper (>= 7), po-debconf
-Build-Depends-Indep: maven-repo-helper (>> 1.0.1), libecj-java, javahelper,
+Build-Depends: default-jdk, ant-optional, debhelper (>= 9), po-debconf, libhamcrest-java (>= 1.3)
+Build-Depends-Indep: maven-repo-helper, libecj-java, javahelper,
  junit4, libjstl1.1-java, libjakarta-taglibs-standard-java
 Standards-Version: 3.9.4
-Vcs-Git: git://git.debian.org/git/pkg-java/tomcat7.git
-Vcs-Browser: http://git.debian.org/?p=pkg-java/tomcat7.git
+Vcs-Git: git://anonscm.debian.org/pkg-java/tomcat7.git
+Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-java/tomcat7.git
 Homepage: http://tomcat.apache.org
 
 Package: tomcat7-common
