Marked libtomcat8-java as conflicting with libtomcat7-java

--- a/debian/control
+++ b/debian/control
@@ -70,7 +70,7 @@ Depends: libecj-java,
          libcommons-pool-java,
          libcommons-dbcp-java,
          libservlet3.1-java (>= ${source:Version}), ${misc:Depends}
-Conflicts: libtomcat6-java
+Conflicts: libtomcat6-java, libtomcat7-java
 Suggests: tomcat8 (>= ${source:Version})
 Description: Servlet and JSP engine -- core libraries
  Apache Tomcat implements the Java Servlet and the JavaServer Pages (JSP)
